<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">

    <ImageView
        android:id="@+id/imageTop"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_38sdp"
        android:adjustViewBounds="true"
        android:contentDescription="metru"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/metru"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/imageBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTop">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:alpha="0.5"
            android:contentDescription="dot_background"
            android:padding="@dimen/_18sdp"
            android:src="@drawable/dot_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/txtFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/libre_franklin_medium"
            android:gravity="center"
            android:text="@string/you_got_it"
            android:textColor="@color/textGrey"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toTopOf="@+id/txtSecond"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/txtSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/libre_franklin_semi_bold"
            android:gravity="center"
            android:text="@string/they_just_cant_see_it"
            android:textColor="@color/textGrey"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toTopOf="@+id/txtDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFirst" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/libre_franklin_light"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/textGrey"
            android:textSize="@dimen/_9ssp"
            app:layout_constraintBottom_toTopOf="@+id/buttonStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSecond" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonStart"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="button_start"
                android:scaleType="fitCenter"
                android:src="@drawable/button_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txtStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:fontFamily="@font/libre_franklin_semi_bold"
                android:gravity="center"
                android:text="@string/get_started"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="icon_arrow"
                android:padding="@dimen/_8sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="start"
        android:scaleType="fitCenter"
        android:src="@drawable/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>